Fixing list spacing on links sections

--- a/public/stylesheets/util.css
+++ b/public/stylesheets/util.css
@@ -125,14 +125,13 @@ div.item {
   font-weight: normal;
   margin: 1em 0 0 0; }
 
-ul.links, ul.no-bullets {
-  margin: 0;
-  padding: 0; }
-  ul.links li,   ul.no-bullets li {
-    margin: 0;
-    padding: 0;
-    padding-bottom: 0.25em;
-    list-style: none; }
+ul.links li, ul.no-bullets li {
+  list-style: none; }
+
+ul.links {
+  margin: 0 !important; }
+  ul.links li {
+    margin-bottom: 0.1em !important; }
 
 dl.meetups dt {
   margin-top: 0.75em;
